WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93900
[CSS Shaders][Chromium] Filters area applied twice when CustomFilterOperation is in the list
https://bugs.webkit.org/show_bug.cgi?id=93900
Summary
[CSS Shaders][Chromium] Filters area applied twice when CustomFilterOperation...
Alexandru Chiculita
Reported
2012-08-13 14:27:06 PDT
CSS Filters are applied twice when there is a CustomFilterOperation in the FilterOperations list.
Attachments
Patch V1
(5.59 KB, patch)
2012-08-14 14:04 PDT
,
Alexandru Chiculita
jamesr
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(5.51 KB, patch)
2012-08-14 17:36 PDT
,
Alexandru Chiculita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexandru Chiculita
Comment 1
2012-08-14 14:04:06 PDT
Created
attachment 158411
[details]
Patch V1 Note that GraphicsLayerChromium::setBackgroundFilters is doing the same thing, but in that case there's no software fallback. GraphicsLayerChromium::setBackgroundFilters seems to be Chromium specific and I don't know what would be the policy. It seems to be called only from C++. Should I add an ASSERT_NOT_REACHED in that case or should I just remove the old filters?
James Robinson
Comment 2
2012-08-14 14:22:45 PDT
Comment on
attachment 158411
[details]
Patch V1 Don't worry about the background filters case, custom filters can't hit that codepath.
WebKit Review Bot
Comment 3
2012-08-14 15:18:23 PDT
Comment on
attachment 158411
[details]
Patch V1 Rejecting
attachment 158411
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: the changes. Patch failed at 0001 [CSSRegions]Region overset property is incorectly computed when content has negative letter spacing and is flowed near to the edge of a region When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output:
http://queues.webkit.org/results/13505074
Alexandru Chiculita
Comment 4
2012-08-14 17:36:28 PDT
Created
attachment 158456
[details]
Patch for landing Rebased.
WebKit Review Bot
Comment 5
2012-08-14 18:22:03 PDT
Comment on
attachment 158456
[details]
Patch for landing Clearing flags on attachment: 158456 Committed
r125629
: <
http://trac.webkit.org/changeset/125629
>
WebKit Review Bot
Comment 6
2012-08-14 18:22:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug